[package]
name = "multi-party-ecdsa"
version = "0.3.5"
edition = "2018"
authors = [
    "Gary <gary@kzencorp.com>",
    "Omer <omer.shlomovits@gmail.com>"
]
keywords = [
    "ecdsa",
    "multi-party-ecdsa",
    "signature",
    "rust",
    "secret-shares",
    "blockchain",
    "cryptography",
    "cryptocurrency"
]

homepage = "https://github.com/KZen-networks/multi-party-ecdsa"
repository = "https://github.com/KZen-networks/multi-party-ecdsa"
license = "GPL-3.0-or-later"
categories = ["cryptography"]

[build]
# panic = "abort"

[lib]
crate-type = ["lib", "staticlib"]

[dependencies]
paillier = { git = "https://github.com/KZen-networks/rust-paillier", tag = "v0.3.4"}
zk-paillier = { git = "https://github.com/KZen-networks/zk-paillier", tag = "v0.2.8"}
subtle = { version = "2" }
serde = { version = "1.0", features = ["derive"] }
zeroize = "0.10.1"

[dependencies.curv]
git = "https://github.com/vhnatyk/curv"
branch="dev/vhnat/gg_core"
# tag = "v0.2.3"
features = ["ec_secp256k1"]

[dev-dependencies]
serde_json = "1.0"
libsecp256k1 = "0.3.2"

[patch.crates-io]
rust-gmp = { version = "0.5.0", features = ["serde_support"], git = "https://github.com/KZen-networks/rust-gmp" }

[dependencies.centipede]
git = "https://github.com/KZen-networks/centipede"
tag = "v0.2.2"

[patch."https://github.com/KZen-networks/curv"]
curv = { git="https://github.com/vhnatyk/curv", branch="dev/vhnat/gg_core" }

# [patch."https://github.com/vhnatyk/curv"]
# curv = { path="c:/projects/repos/kzen/curv" }

[profile.dev]
# panic = 'abort'
# lto = true
# # codegen-units = 1

[profile.release]
# panic = 'abort'
# lto = true
# # codegen-units = 1