[package]
name = "mpecdsa-tools"
version = "0.1.0"
authors = [
    "Gary <gary@kzencorp.com>",
    "Omer <omer.shlomovits@gmail.com>"
]
keywords = [
    "ecdsa",
    "multi-party-ecdsa",
    "signature",
    "rust",
    "secret-shares",
    "blockchain",
    "cryptography",
    "cryptocurrency"]

homepage = "https://github.com/KZen-networks/multi-party-ecdsa"
repository = "https://github.com/KZen-networks/multi-party-ecdsa"
license = "GPL-3.0-or-later"
categories = ["cryptography"]

[build]
panic = "abort"

# [lib]
# crate-type = ["bin", "staticlib"]

[dependencies]
# std = { path = "./lib-minstd" }
# paillier = { git = "https://github.com/KZen-networks/rust-paillier"}
# zk-paillier = { git = "https://github.com/KZen-networks/zk-paillier"}
# paillier = { path = "../../../rust-paillier"}
# zk-paillier = { path="../../../zk-paillier"}
# centipede = { path="../../../centipede"}
paillier = { git = "https://github.com/vhnatyk/rust-paillier", branch = "vhnat/mpecdsa-core" }
zk-paillier = { git = "https://github.com/vhnatyk/zk-paillier", branch = "vhnat/ring_replace"}
centipede = { git = "https://github.com/vhnatyk/centipede"}
multi-party-ecdsa = { path = "../" }

hex = "0.3.2"
subtle = {version = "2", features = ["nightly"]}
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
reqwest = "0.9.5"
rocket = "0.4.0"
rocket_contrib = "0.4.0"
uuid = { version = "0.7", features = ["v4"] }
rust-crypto = "^0.2"